--- a/assets/stylesheets/css/main.css
+++ b/assets/stylesheets/css/main.css
@@ -7,6 +7,39 @@ footer.main {
   padding: 1em 0;
   border-top: 1px solid whitesmoke; }
 
+.fat-button {
+  border: 1px solid #f71b16;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 0 0 #f4afad;
+  color: white;
+  display: inline-block;
+  font-size: 11px;
+  font-weight: bold;
+  background-color: #f26663;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f26663), color-stop(100%, #f82a25));
+  background-image: -webkit-linear-gradient(#f26663, #f82a25);
+  background-image: linear-gradient(#f26663, #f82a25);
+  padding: 7px 18px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #f90600;
+  background-clip: padding-box;
+  font-size: 24px; }
+  .fat-button:hover:not(:disabled) {
+    box-shadow: inset 0 1px 0 0 #ef8280;
+    cursor: pointer;
+    background-color: #ec534f;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ec534f), color-stop(100%, #f61c17));
+    background-image: -webkit-linear-gradient(#ec534f, #f61c17);
+    background-image: linear-gradient(#ec534f, #f61c17); }
+  .fat-button:active:not(:disabled) {
+    border: 1px solid #f71b16;
+    box-shadow: inset 0 0 8px 4px #f4100b, inset 0 0 8px 4px #f4100b, 0 1px 1px 0 #eeeeee; }
+  .fat-button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed; }
+  .fat-button:hover:not(:disabled) {
+    color: white; }
+
 .hero {
   padding: 8em 2em;
   background: #f26663 url("../../images/hero-background.jpg") bottom center no-repeat;
