design overhaul: fixed font issue, responsive work, layout tweaks, hero tweaks, sexified buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,18 +21,18 @@
         <section class="hero">
 
             <h1 class="page-title"><a href="/">{{ site.name }}</a></h1>
-            <h6 class="page-subtitle">Feb 19<span class="divider"></span>6 PM<span class="divider"></span>iHub</h6>
+            <h6 class="page-subtitle">Next meetup is <strong>Feb. 19th</strong> at <strong>6 PM</strong> at <strong>iHub</strong></h6>
+            <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
+
+        </section>
+
+        <section class="intro full-width">
+
+            <h4 class="pitch">You spent your entire day <strong>in front of a computer</strong> making things. Come out and <strong>join some other humans</strong> in Louisville who do the same thing.</h4>
 
         </section>
 
         <section class="page-wrapper">
-
-            <article class="intro">
-                <h4 class="pitch">You spent your entire day in front of a computer making things. Come out and join some other humans in Louisville who do the same thing.</h4>
-                <p><strong>Who we are</strong></p>
-                <p>We're a group of web developers and PHP programmers who enjoy building software with the Laravel framework. The goal of Laravel Louisville is to help build the software engineering community in Louisville by teaching each other how to write quality software in PHP.</p>
-            </article>
-
 
             <article class="page">
 
