--- a/assets/stylesheets/css/main.css
+++ b/assets/stylesheets/css/main.css
@@ -3,9 +3,24 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
+.btn {
+  display: inline-block;
+  padding: 0.5em 1.5em;
+  font-size: 1.5em;
+  background: #f26663;
+  border: none;
+  color: white;
+  border-radius: 0.3125em;
+  text-decoration: none; }
+  .btn:hover {
+    background: #f15a57;
+    color: white; }
+  .btn:active {
+    background: #f04f4b; }
+
 footer.main {
-  padding: 1em 0;
-  border-top: 1px solid whitesmoke; }
+  padding: 1em 2em;
+  border-top: 1px solid #f1f1f1; }
 
 .fat-button {
   border: 1px solid #f71b16;
@@ -41,13 +56,14 @@ footer.main {
     color: white; }
 
 .hero {
-  padding: 8em 2em;
+  padding: 4em 2em 6em;
   background: #f26663 url("../../images/hero-background.jpg") bottom center no-repeat;
   background-size: cover;
   text-align: center; }
   .hero .page-title {
     font-size: 6em;
-    font-weight: 400;
+    line-height: 1;
+    font-weight: 100;
     margin-bottom: 0;
     text-shadow: 0 0 2px #dd1712; }
     .hero .page-title a {
@@ -81,8 +97,6 @@ section {
     display: table; }
   section:after {
     clear: both; }
-  section.full-width {
-    padding: 8em; }
 
 article, section:not(.page-wrapper):not(.hero):not(.full-width) {
   *zoom: 1;
@@ -90,7 +104,7 @@ article, section:not(.page-wrapper):not(.hero):not(.full-width) {
   margin-left: auto;
   margin-right: auto;
   padding: 2em;
-  border-bottom: 1px solid whitesmoke; }
+  border-bottom: 1px solid #f1f1f1; }
   article:before, section:not(.full-width):not(.hero):not(.page-wrapper):before, article:after, section:not(.full-width):not(.hero):not(.page-wrapper):after {
     content: " ";
     display: table; }
@@ -102,8 +116,7 @@ article, section:not(.page-wrapper):not(.hero):not(.full-width) {
   max-width: 50em;
   margin-left: auto;
   margin-right: auto;
-  padding: 0;
-  background: white; }
+  padding: 0; }
   .page-wrapper:before, .page-wrapper:after {
     content: " ";
     display: table; }
@@ -113,29 +126,53 @@ article, section:not(.page-wrapper):not(.hero):not(.full-width) {
 .outset-center {
   margin: 2em -4em; }
 
-.intro .pitch {
-  color: #b5b5b5; }
+.intro {
+  padding: 0 2em;
+  background: #f1f1f1; }
+  .intro .pitch {
+    text-align: center;
+    color: #f17370; }
+    @media screen and (min-width: 481px) {
+      .intro .pitch {
+        float: left;
+        display: block;
+        margin-right: 8.76166%;
+        width: 63.74611%;
+        margin-left: 18.12694%; }
+        .intro .pitch:last-child {
+          margin-right: 0; } }
 
+.page .section-title {
+  margin-bottom: 0; }
+  .page .section-title:before, .page .section-title:after {
+    content: "\2014";
+    display: block;
+    font-weight: 100;
+    color: #f1f1f1; }
 .page ul.schedule {
   padding: 0;
   list-style-type: none;
-  margin: 0.3125em 0; }
+  margin: 0 0 2em; }
   .page ul.schedule li {
     padding: 0.625em 0; }
   .page ul.schedule li:not(:last-child) {
-    border-bottom: 1px solid whitesmoke; }
+    border-bottom: 1px solid #f1f1f1; }
   .page ul.schedule .time {
-    color: #b5b5b5; }
+    color: #b1b1b1;
+    margin-right: 0.5em; }
 
 html {
   font-size: 100%; }
 
 body {
-  font-family: "promia-nova",sans-serif;
-  font-size: 14px;
+  font-family: "proxima-nova", sans-serif;
+  font-size: 13.5px;
   line-height: 1.5;
   font-weight: 300;
   color: #444444; }
+  @media screen and (min-width: 481px) {
+    body {
+      font-size: 16px; } }
 
 a {
   color: #f26663; }
@@ -143,7 +180,7 @@ a {
     color: #dd1712; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 100; }
+  font-weight: 300; }
   h1 strong, h2 strong, h3 strong, h4 strong, h5 strong, h6 strong {
     font-weight: 600; }
 
