--- a/assets/stylesheets/sass/main.scss
+++ b/assets/stylesheets/sass/main.scss
@@ -9,7 +9,7 @@
 // Import modules
 @import "partials/colors";
 //@import "partials/breakpoints";
-//@import "partials/buttons";
+@import "partials/buttons";
 @import "partials/footer";
 @import "partials/forms";
 //@import "partials/general";
