--- a/assets/stylesheets/sass/partials/_hero.scss
+++ b/assets/stylesheets/sass/partials/_hero.scss
@@ -1,14 +1,15 @@
 // Hero
 
 .hero {
-    @include pad(8em 2em);
+    @include pad(4em 2em 6em);
     background: $laravel-dk url("../../images/hero-background.jpg") bottom center no-repeat;
     background-size: cover;
     text-align: center;
 
     .page-title {
         font-size: 6em;
-        font-weight: 400;
+        line-height: 1;
+        font-weight: 100;
         margin-bottom: 0;
         text-shadow: 0 0 2px darken($laravel-dk, 20%);
         a {
