changed johns talk title, replaced github ribbon with text link, added some responsive styles for hero

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
         <section class="intro full-width">
 
-            <h4 class="pitch">You spent your entire day <strong>in front of a computer</strong> making things. Come out and <strong>join some other humans</strong> in Louisville who do the same thing.</h4>
+            <h4 class="pitch">You spend your entire day <strong>in front of a computer</strong> making stuff. Come out and <strong>join some other humans</strong> in Louisville who do the same.</h4>
 
         </section>
 
@@ -40,18 +40,18 @@
                 
             </article>
 
-            <footer class="main">
-            
-                <p>
-                    <a href="http://www.meetup.com/laravel-louisville">meetup.com/laravel-louisville</a> | 
-                    <a href="https://github.com/laravel-louisville">github.com/laravel-louisville</a>
-                </p>
-            
-            </footer><!--/ main -->
-
         </section><!--/ page-wrapper-->
 
-        <a href="https://github.com/laravel-louisville/meetup"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github-camo.global.ssl.fastly.net/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
+        <footer class="main">
+
+            <p>
+                <a href="http://www.meetup.com/laravel-louisville">meetup.com/laravel-louisville</a> | 
+                <a href="https://github.com/laravel-louisville">github.com/laravel-louisville</a>
+            </p>
+
+        </footer><!--/ main -->
+
+        <a href="https://github.com/laravel-louisville/meetup" class="github-ribbon">Fork on GitHub</a>
 
     </body>
 </html>
