--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
         <section class="hero">
 
-            <h1 class="page-title"><a href="/">{{ site.name }}</a></h1>
+            <h1 class="page-title"><a href="/meetup">{{ site.name }}</a></h1>
             <h6 class="page-subtitle">Next meetup is <strong>Feb. 19th</strong> at <strong>6 PM</strong> at <strong>iHub</strong></h6>
             <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
 
