--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,9 @@
         <section class="hero">
 
             <h1 class="page-title"><a href="/meetup">{{ site.name }}</a></h1>
-            <h6 class="page-subtitle">Next meetup is <strong>Feb. 19th</strong> at <strong>6 PM</strong> at <strong>iHub</strong></h6>
+            <h6 class="page-subtitle">Our next meetup is <strong>Feb. 19th</strong> at <strong>6 PM</strong> at <strong>iHub</strong></h6>
             <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
+            <a class="btn" href="http://www.twitter.com/lurvul">@Lurvul</a>
 
         </section>
 
@@ -45,6 +46,7 @@
         <footer class="main">
 
             <p>
+                <a href="https://www.twitter.com/lurvul">@lurvul</a> |
                 <a href="http://www.meetup.com/laravel-louisville">meetup.com/laravel-louisville</a> | 
                 <a href="https://github.com/laravel-louisville">github.com/laravel-louisville</a>
             </p>
