--- a/assets/stylesheets/sass/partials/_buttons.scss
+++ b/assets/stylesheets/sass/partials/_buttons.scss
@@ -5,6 +5,7 @@
 .btn {
     display: inline-block;
     padding: 0.5em 1.5em;
+    margin: 0 0.25em;
     font-size: 1.5em;
     background: $laravel-dk;
     border: none;
