--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="assets/stylesheets/css/main.css">
+
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     
     </head>
     <body>
@@ -21,7 +23,7 @@
         <section class="hero">
 
             <h1 class="page-title"><a href="/meetup">{{ site.name }}</a></h1>
-            <h6 class="page-subtitle">Our next meetup is <strong>Feb. 19th</strong> at <strong>6 PM</strong> at <strong>iHub</strong></h6>
+            <h6 class="page-subtitle">Our next meetup is <strong>Mar. 19th</strong> at <strong>6 PM</strong> at <strong>iHub</strong></h6>
             <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
             <a class="btn" href="http://www.twitter.com/lurvul">@Lurvul</a>
 
@@ -46,9 +48,9 @@
         <footer class="main">
 
             <p>
-                <a href="https://www.twitter.com/lurvul">@lurvul</a> |
-                <a href="http://www.meetup.com/laravel-louisville">meetup.com/laravel-louisville</a> | 
-                <a href="https://github.com/laravel-louisville">github.com/laravel-louisville</a>
+                <a href="https://vimeo.com/laravellouisville"><i class="fa fa-vimeo-square fa-2x"></i></a>
+                <a href="https://www.twitter.com/lurvul"><i class="fa fa-twitter-square fa-2x"></i></a>
+                <a href="https://github.com/laravel-louisville"><i class="fa fa-github-square fa-2x"></i></a>
             </p>
 
         </footer><!--/ main -->
