--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <section class="hero">
 
             <h1 class="page-title"><a href="/meetup">{{ site.name }}</a></h1>
-            <h6 class="page-subtitle">Our next meetup is <strong>Mar. 19th</strong> at <strong>6 PM</strong> at <strong>iHub</strong></h6>
+            <h6 class="page-subtitle">Our next meetup is <strong>Apr. 16th</strong> at <strong>6 PM</strong> at <strong>iHub</strong></h6>
             <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
             <a class="btn" href="http://www.twitter.com/lurvul">@Lurvul</a>
 
@@ -50,12 +50,11 @@
             <p>
                 <a href="https://vimeo.com/laravellouisville"><i class="fa fa-vimeo-square fa-2x"></i></a>
                 <a href="https://www.twitter.com/lurvul"><i class="fa fa-twitter-square fa-2x"></i></a>
-                <a href="https://github.com/laravel-louisville"><i class="fa fa-github-square fa-2x"></i></a>
             </p>
 
         </footer><!--/ main -->
 
-        <a href="https://github.com/laravel-louisville/meetup" class="github-ribbon">Fork on GitHub</a>
+        <a href="https://github.com/laravel-louisville/meetup" class="github-ribbon"><i class="fa fa-github fa-2x"></i></a>
 
     </body>
 </html>
